fixed flashcard content overflow display

--- a/app/components/Flashcard/Flashcard.module.css
+++ b/app/components/Flashcard/Flashcard.module.css
@@ -13,15 +13,16 @@
 }
 
 .front, .back {
-    display: flex;
-    flex-direction: column;
     position: absolute;
     width: 100%;
     height: 100%;
-    backface-visibility: hidden;
     display: flex;
+    flex-direction: column;
     /* justify-content: center; */
     align-items: center;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    backface-visibility: hidden;
     font-size: 1.2rem;
     box-shadow: 4px 4px 8px rgba(0, 0, 0, 0.3);
     border-radius: 4%;
@@ -31,4 +32,14 @@
 
 .back {
     transform: rotateY(180deg);
+}
+
+@media (min-width: 640px) {
+    .flashcard {
+        width: 450px;
+        height: 300px;
+    }
+    .front, .back {
+        font-size: xx-large;
+    }
 }
